<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#13557f"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/banner" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="0dp"
        android:text="@string/recipient_no"
        android:textColor="#ffffff" />




    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:gravity="top"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="0dp"
        android:text="@string/type"
        android:textColor="#ffffff" /><EditText
        android:id="@+id/editText2"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="25dp"
        android:ems="6"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLength="142" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView2"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="2dp"
        android:text="@string/char_left"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="TextView"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editText2"
        android:layout_below="@id/editText2"
        android:text="@string/send" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/reset" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:text="@string/send_msg"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBox1"
        android:text="@string/Multiple"
        android:textSize="16sp" />





    <ImageButton
        android:id="@+id/imageButton1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="43dp"
        android:layout_height="45dp"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/editText1"
        android:background="@drawable/add1"
        android:text="+Con" />

</RelativeLayout>